test/spec_vectors/i32/fail/module_10.wat
(module (func $type-unary-operand-empty-in-select (select (i32.eqz) (i32.const 1) (i32.const 2)) (drop)))